<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#747E7E"
    tools:context=".ActivityAdmin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#3F7C85"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        >

        <EditText
            android:id="@+id/edtIProd"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:autofillHints="Id Producto"
            android:ems="10"
            android:hint="@string/edtIdProducto"
            android:inputType="text"
            android:textColorHint="#DEC5C3"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="85dp" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:autofillHints="Nombre"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="text"
            android:textColorHint="#DEC5C3"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="85dp"
            app:layout_constraintTop_toBottomOf="@id/edtIProd"
            />

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:autofillHints="Descripcion"
            android:ems="10"
            android:hint="@string/txtDescripcion"
            android:inputType="text"
            android:textColorHint="#DEC5C3"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="85dp"
            app:layout_constraintTop_toBottomOf="@id/edtNombre"
            />

        <EditText
            android:id="@+id/edtPrecio"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:autofillHints="Precio"
            android:ems="10"
            android:hint="@string/txtPrecio"
            android:inputType="text"
            android:textColorHint="#DEC5C3"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="85dp"
            app:layout_constraintTop_toBottomOf="@id/edtDescripcion"
            />


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF5F5D"
            android:text="@string/btnBuscar"
            android:textColor="#DEC5C3"
            app:layout_constraintTop_toBottomOf="@id/edtPrecio"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="96dp" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF5F5D"
            android:text="@string/btnRegresar"
            android:textColor="#DEC5C3"
            app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="96dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>